# ocaml_exercises

./: .ocamlformat  README.md  dune-project  ocaml_exercises.opam
lib/: dune  exercises.ml
test/: dune  test_ocaml_exercises.ml
